Generation duration is configurable now

--- a/config.json
+++ b/config.json
@@ -4,6 +4,8 @@
     "Height": 30
   },
 
+  "GenerationDuration": "100ms",
+
   "Positions": [
     [10,10],
     [10,11],
@@ -13,6 +15,14 @@
     [20,12],
     [21,12],
     [22,12],
-    [23,12]
+    [23,12],
+    [24,12],
+    [26,12],
+    [27,12],
+    [27,12],
+    [28,12],
+    [28,13],
+    [28,14],
+    [28,15]
   ]
 }
